--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -457,15 +457,14 @@ div.tocify {
 </div>
 
 
-<p>The final extinction of a population usually is probabilistic. That is, once the population gets small enough, <em>demographic stochasticity</em>, <em>genetic drift</em>, and <em>inbreeding depression</em> can together deliver the final death knell to a population. In conservation biology the study of processes that disproportionately influence small populations is called the <em>small-population paradigm</em>.</p>
-<p>That is: the small-population paradigm refers to the tendency in <strong>conservation biology</strong> to study those largely <em>stochastic</em> factors that can result in the extinction or degradation of small populations.</p>
+<p>The final extinction of a population usually is probabilistic. That is, once the population gets small enough, <em>demographic stochasticity</em>, <em>genetic drift</em>, and <em>inbreeding depression</em> can together deliver the final death knell to a population. In conservation biology the study of the drivers of extinction for small populations is called the <em>small-population paradigm</em>. That is: the small-population paradigm refers to the tendency in <strong>conservation biology</strong> to study those largely <em>stochastic</em> factors that can result in the extinction or degradation of small populations.</p>
 <div id="demographic-stochasticity" class="section level3">
 <h3>Demographic stochasticity</h3>
 <p>We have already explored this concept, which is central to the small population paradigm!</p>
 <p>The simple fact is: <em>it is much more likely for all 10 individuals in a population to be <strong>unlucky</strong> in a given year than for all 1000 individuals in a population to be <strong>unlucky</strong> in a given year!!</em> – just as it is very unlikely for all coin flips out of 1000 to come up heads…</p>
-<p>This illustrates the very important concept, that small populations can go extinct due to demographic stochasticity alone, whereas this possibility is vanishingly small for large populations.</p>
+<p>This illustrates the very important concept, that small populations can go extinct due to demographic stochasticity alone, whereas this possibility is vanishingly small for large populations (this is basically impossible).</p>
 <p>The moral of the story for demographic stochasticity is: weird and dramatic things (e.g., extinction) can happen in small populations for no other reason than that the population is small!</p>
-<p>Weird and dramatic things like random extinction just would <strong>never happen</strong> in large populations due to random mating, birth, and mortality processes (assuming a stable, favorable environment and no range-wide catastrophic events)!</p>
+<p>Dramatic events like random extinction just would <strong>never happen</strong> in large populations due to random mating, birth, and mortality processes (assuming a stable, favorable environment and no range-wide catastrophic events)!</p>
 <p>Same goes for <em>genetic drift</em>! Genetic drift is a <em>small-population phenomenon</em>!</p>
 </div>
 <div id="genetic-drift" class="section level3">
@@ -482,16 +481,15 @@ div.tocify {
 <h3>Inbreeding depression</h3>
 <p><img src="inbreeding1.jpg" /></p>
 <p>Inbreeding depression is another problem peculiar to small populations.</p>
-<p>Most diploid populations have some ‘bad’ gene variants (alleles) in their gene pool. These are often called <strong>deleterious alleles</strong>. These deleterious alleles usually don’t cause problems becuase in general they are <strong>recessive</strong> - that is, the bad effect is only apparent if an individual has <em>two copies of that allele</em>! And since these alleles are rare, it is extremely unlikely that you get two copies of the same bad allele!</p>
-<p>Unless…your two parents are close relatives. If your parents are close relatives, both of them have a relatively high probability of inheriting at least one of the same ‘bad’ gene variants from a single common ancestor!</p>
-<p><strong>Q</strong>: Why is it more likely for your two parents to be close relatives if you are living in a small population?</p>
+<p>Most diploid populations have some ‘bad’ gene variants (alleles) in their gene pool. These are often called <strong>deleterious alleles</strong>. These deleterious alleles usually don’t cause problems because in general they are <strong>recessive</strong> - that is, the bad effect is only apparent if an individual has <em>two copies of that allele</em>! And since these alleles are rare, it is extremely unlikely that you get two copies of the same bad allele!</p>
+<p>Unless…your two parents are close relatives (which can be more common in small populations). If your parents are close relatives, both of them have a relatively high probability of inheriting at least one of the same ‘bad’ gene variants from a single common ancestor!</p>
 <p><img src="inbreeding2.jpg" /></p>
 <p>The above image is of <a href="https://en.wikipedia.org/wiki/Charles_II_of_Spain">Charles II of Spain</a>, who tragically illustrates some of the issues that can emerge with severe inbreeding.</p>
 </div>
 <div id="extinction-vortex" class="section level2">
 <h2>Extinction vortex</h2>
 <p><img src="vortex1.jpg" /></p>
-<p>One of the central ideas arising from the small population paradigm is the concept of the <strong>extinction vortex</strong>. This concept is illustrated in the above figure.</p>
+<p>One of the important ideas emerging from the small population paradigm is the concept of the <strong>extinction vortex</strong>. This concept is illustrated in the above figure.</p>
 <p>Once a population gets small enough, it becomes subject to catastrophic declines due to demographic (and environmental) stochasticity, leading to inbreeding and random loss of useful genes, leading to reduced vital rates, leading to smaller population sizes, leading to further genetic degradation, leading to more possibility of catastrophic declines due to demographic stochasticity, leading inevitably to extinction…</p>
 <p>In general, extinction is often caused by stochastic processes, but stochastic processes are unlikely to be the reason the population got small in the first place!</p>
 </div>
@@ -500,25 +498,30 @@ div.tocify {
 <p>As wildlife managers, we often wish to know: “how small does a population have to be before we have to start worrying about adverse consequences like extinction, genetic erosion, and inbreeding?”</p>
 <p>When we talked about <a href="LECTURE5.html">Allee effects</a>, we saw a case in which a deterministic population model could have a minimum viable population size- below a certain critical threshold, the population was doomed to extinction, and above the threshold the population would deterministically increase until carrying capacity.</p>
 <p>However, the MVP concept is derived from <em>conservation biology</em> and not from theoretical population biology. Conservation biology deals with real-world systems which are messy, variable and uncertain. Therefore, the MVP concept is usually quantified using stochastic population models.</p>
-<p>The most satisfying general definition of MVP (in my opinion) directly relates to the extinction vortex concept: Minimum Viable Population size (MVP) is that <em>population size above which the extinction vortex can be safely averted</em>.</p>
-<p>However, the above definition is not strictly quantifiable for most species. Also MVP is often defined in relation to population models, many of which don’t have an explicit genetic component (becuase we often don’t know exactly how many deleterious recessive alleles are in a population!). The quantitative, operational definition that we will use in this course is:</p>
+<p>The most satisfying general definition of MVP (in my opinion) directly relates to the extinction vortex concept: Minimum Viable Population size (MVP) is that <em>population size above which the extinction vortex can be safely avoided</em>.</p>
+<p>However, the above definition is not strictly quantifiable for most species. Also MVP is often defined in relation to population models, many of which don’t have an explicit genetic component (because we often don’t know exactly how many deleterious recessive alleles are in a population!). The quantitative, operational definition that we will use in this course is:</p>
 <blockquote>
-<p><em>MVP: the smallest abundance that satisfies a specified extinction risk threshold (e.g., the smallest initial abundance such that the risk of extinction over 50 years is below 5%)</em></p>
+<p>MVP: the abundance threshold below which extinction risk exceeds [a risk tolerance threshold] over [a time horizon]</p>
+</blockquote>
+<p>To quantify MVP, we need to specify: (1) a time horizon (e.g., 100 years) and (2) a risk tolerance threshold (e.g., 5% extinction risk).</p>
+<p>For example, with a time horizon of 50 years and a risk tolerance threshold of 5%, MVP could be quantified as:</p>
+<blockquote>
+<p>MVP: the abundance threshold below which extinction risk exceeds 5% over 50 years</p>
 </blockquote>
 </div>
 <div id="population-viability-analysis-pva" class="section level2">
 <h2>Population Viability Analysis (PVA)</h2>
-<p>Population Viability Analysis (PVA) is often used to model the processes involved in the extinction vortex (the central concept of the small population paradigm). This can include genetic drift and inbreeding depression. However, in this course, we won’t get into modeling genetics (unless you really want to- I’m happy to show you how to do this in Vortex!)</p>
-<p>The most widely-used PVA software, <a href="http://www.vortex10.org/Vortex10.aspx">Vortex</a>, gets its name from the extinction vortex concept. Vortex does allow explicit modeling of inbreeding and loss of genetic diversity in small populations.</p>
+<p>Population Viability Analysis (PVA) is often used to model the processes involved in the extinction vortex (the central concept of the small population paradigm). This can include genetic drift and inbreeding depression. However, in this course, we won’t get into modeling genetics (unless you really want to- I’m happy to show you how to do this using the Vortex software!)</p>
+<p>The most widely-used PVA software, <a href="https://www.cpsg.org/our-approach/science-based-tools/vortex">Vortex</a>, gets its name from the extinction vortex concept. Vortex does allow explicit modeling of inbreeding and loss of genetic diversity in small populations.</p>
 <p><img src="Vortex10.jpg" /></p>
 </div>
 <div id="example-aruba-island-rattlesnake" class="section level2">
 <h2>Example: Aruba island rattlesnake</h2>
 <p>The aruba island rattlesnake, or Cascabel (<em>Crotalus durissus unicolor</em>), is the top predator on the island of Aruba, and primarily consumes rodents.</p>
 <p><img src="aruba_rattlesnake1.jpg" /></p>
-<p>The Aruba island rattlenake, as you might expect, occurs only on the island of Aruba.</p>
+<p>The Aruba island rattlesnake, as you might expect, occurs only on the island of Aruba.</p>
 <p><img src="aruba1.png" /></p>
-<p>The Aruba rattlesnake is listed as <em>Critically Endangered</em> by IUCN, and has several attributes that make it particularly susceptible to falling into the extinction vortex:</p>
+<p>The Aruba rattlesnake is listed as <em>Critically Endangered</em> by IUCN (actually, it is no longer listed as of 2021 due to lack of information), and has several attributes that make it particularly susceptible to falling into the extinction vortex:</p>
 <p>See <a href="LAB5.html">Lab 5</a> for the related MVP activity.</p>
 <p><strong>Q</strong> Why are island-endemic species like the Aruba rattlesnake so vulnerable to extinction? [tophat]</p>
 <p><strong>Q</strong> Are species that are confined to small areas (like the Aruba rattlesnake) more vulnerable to <em>environmental stochasticity</em> than species that occupy larger geographic ranges? [tophat]</p>
