--- a/schedule.html
+++ b/schedule.html
@@ -14,8 +14,8 @@
 
 <title>Schedule, Spring 2022</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
-<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
+<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -592,7 +592,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/1/2022</td>
-<td align="left">LAB 6: Metapopulation modeling in InsightMaker (group assignment: PVA models due)</td>
+<td align="left">LAB 6: Metapopulation modeling in InsightMaker</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
@@ -604,19 +604,19 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/6/2022</td>
-<td align="left">LECTURE: Parameter estimation</td>
+<td align="left">LECTURE: Parameter estimation (group assignment: PVA models due)</td>
 <td align="left"><a href="amstrup1.pdf">Amstrup et al Chapter 1</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/8/2022</td>
-<td align="left">LAB 7 (optional): Parameter estimation: mark-recapture data (lab 6 due)</td>
+<td align="left">PVA projects: group meetings (working model and description)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 13</td>
 <td align="left">4/11/2022</td>
-<td align="left">Review for Midterm #2 (group assignment: peer review papers due)</td>
+<td align="left">Review for Midterm #2</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
@@ -628,13 +628,13 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/15/2022</td>
-<td align="left">LAB: Final Project Peer Review (submit peer review)</td>
+<td align="left">LAB 7 (optional): Parameter estimation: mark-recapture data (lab 6 due)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 14</td>
 <td align="left">4/18/2022</td>
-<td align="left">LECTURE: Species interactions: competition</td>
+<td align="left">LECTURE: Species interactions: competition (final project: complete drafts due)</td>
 <td align="left">Gotelli Chapter 5</td>
 </tr>
 <tr class="odd">
@@ -646,7 +646,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/22/2022</td>
-<td align="left">LAB: STUDENT PRESENTATIONS (final project: complete drafts due)</td>
+<td align="left">LAB: Final Project Peer Review (submit peer review)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
@@ -658,7 +658,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/27/2022</td>
-<td align="left">TBD</td>
+<td align="left">LECTURE: STUDENT PRESENTATIONS</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
