update PVA mini course

--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -14,8 +14,8 @@
 
 <title>Small-population paradigm</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -457,13 +457,14 @@ div.tocify {
 </div>
 
 
-<p>The final extinction of a population usually is probabilistic. That is, once the population gets small enough, <em>demographic stochasticity</em>, <em>genetic drift</em>, and <em>inbreeding depression</em> can together deliver the final death knell to a population. In conservation biology the study of the drivers of extinction for small populations is called the <em>small-population paradigm</em>. That is: the small-population paradigm refers to the tendency in <strong>conservation biology</strong> to study those largely <em>stochastic</em> factors that can result in the extinction or degradation of small populations.</p>
+<p>The final extinction of a population is usually caused by factors that small populations are uniquely sensitive to; once a population gets small enough, <em>demographic stochasticity</em>, <em>genetic drift</em>, and <em>inbreeding depression</em> can together deliver the final death knell to a population.</p>
+<p>In conservation biology the study of the drivers of extinction for small populations is called the <em>small-population paradigm</em>. The small-population paradigm refers to the tendency in <strong>conservation biology</strong> to study those largely <em>stochastic</em> factors that can result in the extinction or degradation of small populations.</p>
 <div id="demographic-stochasticity" class="section level3">
 <h3>Demographic stochasticity</h3>
 <p>We have already explored this concept, which is central to the small population paradigm!</p>
 <p>The simple fact is: <em>it is much more likely for all 10 individuals in a population to be <strong>unlucky</strong> in a given year than for all 1000 individuals in a population to be <strong>unlucky</strong> in a given year!!</em> – just as it is very unlikely for all coin flips out of 1000 to come up heads…</p>
 <p>This illustrates the very important concept, that small populations can go extinct due to demographic stochasticity alone, whereas this possibility is vanishingly small for large populations (this is basically impossible).</p>
-<p>The moral of the story for demographic stochasticity is: weird and dramatic things (e.g., extinction) can happen in small populations for no other reason than that the population is small!</p>
+<p>The moral of the story is: weird and dramatic things (e.g., extinction) can happen in small populations for no other reason than that the population is small!</p>
 <p>Dramatic events like random extinction just would <strong>never happen</strong> in large populations due to random mating, birth, and mortality processes (assuming a stable, favorable environment and no range-wide catastrophic events)!</p>
 <p>Same goes for <em>genetic drift</em>! Genetic drift is a <em>small-population phenomenon</em>!</p>
 </div>
@@ -471,7 +472,7 @@ div.tocify {
 <h3>Genetic drift</h3>
 <p>In large populations, random forces are just not strong enough to eradicate a relatively common gene variant (allele) from a population (this could happen by natural selection, but not through random reproductive processes). In small populations, random chance can be the primary driver of genetic change over time!</p>
 <p><img src="geneticdrift1.png" /></p>
-<p>Let’s imagine that the balls in the jars in the above figure are individuals. The black dots indicate how many offspring that individual will have (thereby passing on its genes). The different colored balls represent different genetic variants. Each jar, left to right, represents a different (non-overlappling) generation.</p>
+<p>Let’s imagine that the balls in the jars in the above figure are individuals. The black dots indicate how many offspring that individual will have (thereby passing on its genes). The different colored balls represent different genetic variants. Each jar, left to right, represents a different (non-overlapping) generation.</p>
 <p>Does this sound familiar? Just by random chance, some individuals will breed and some will not. Just by random chance, some individuals will have more of their offspring survive. Genetic drift is simply a consequence of <strong>demographic stochasticity</strong>.</p>
 <p>Finally, let’s imagine that the red balls represent individuals that are more likely to survive a rare drought (but have no selective advantage or disadvantage under normal circumstances). Just by random chance, the blue individuals happen to successfully mate and reproduce more than the red individuals- the blue variant becomes <strong>fixed</strong> in the population and the red variants go extinct. <em>There is no natural selection involved in this scenario – just stochasticity!</em></p>
 <p>And now, by random chance, this population is now more susceptible to drought than it was before!</p>
@@ -491,7 +492,7 @@ div.tocify {
 <p><img src="vortex1.jpg" /></p>
 <p>One of the important ideas emerging from the small population paradigm is the concept of the <strong>extinction vortex</strong>. This concept is illustrated in the above figure.</p>
 <p>Once a population gets small enough, it becomes subject to catastrophic declines due to demographic (and environmental) stochasticity, leading to inbreeding and random loss of useful genes, leading to reduced vital rates, leading to smaller population sizes, leading to further genetic degradation, leading to more possibility of catastrophic declines due to demographic stochasticity, leading inevitably to extinction…</p>
-<p>In general, extinction is often caused by stochastic processes, but stochastic processes are unlikely to be the reason the population got small in the first place!</p>
+<p>In general, extinction is often caused by stochastic processes, but stochastic processes are unlikely to be the reason the population got small in the first place! (that is the topic of the ‘declining population paradigm’ lecture!)</p>
 </div>
 <div id="minimum-viable-populations-mvp" class="section level2">
 <h2>Minimum Viable Populations (MVP)</h2>
