--- a/PVA1_421.html
+++ b/PVA1_421.html
@@ -460,7 +460,7 @@ div.tocify {
 <div id="population-viability-analysis-pva" class="section level2">
 <h2>Population Viability Analysis (PVA)</h2>
 <p>In this short course, we will explore the use of <strong>population models</strong> to address conservation questions– a process often called <strong>population viability analysis (PVA)</strong></p>
-<p>PVA is a set of practical approaches to problem-solving in conservation, and wildlife management via creative application of <em>demographic theory</em>, <em>simulation models</em> and <em>statistics</em>.</p>
+<p>PVA is a set of practical approaches to problem-solving in conservation and wildlife management via creative application of <em>population ecology theory</em>, <em>simulation models</em> and <em>statistics</em>.</p>
 <p>As much as possible we will use hands-on activities to explore the fundamentals of PVA. We will use <a href="https://insightmaker.com/">InsightMaker- a free web-based systems modeling tool</a> for running simulation models.</p>
 <p>First we will run through the basics of population modeling for wildlife conservation…</p>
 <p>Second, we will build a PVA for the grizzly bears of Yellowstone National Park!</p>
@@ -485,14 +485,15 @@ div.tocify {
 <p><img src="PVA1_421_files/figure-html/unnamed-chunk-2-1.png" width="672" /></p>
 <p><img src="Human_population_growth_from_1800_to_2000.png" /></p>
 <p><img src="positivefeedback1.png" /></p>
-<p>The takeaway? With sufficient resources, populations grow in a <strong>positive feedback</strong> process. More individuals means greater potential for population growth (e.g., more total births!), which means more individuals enter the population, which means EVEN GREATER potential for population growth.</p>
+<p>The takeaway? With sufficient resources, populations grow in a <strong>positive feedback</strong> process. More individuals in the population means greater potential for population growth (e.g., making more babies!), which means more individuals enter the population, which means EVEN GREATER potential for population growth.</p>
 </div>
 </div>
 <div id="modeling" class="section level2">
 <h2>Modeling!!</h2>
 <div id="computer-programming-and-systems-thinking" class="section level3">
 <h3>Computer programming and systems thinking</h3>
-<p>Modern computers have reduced or eliminated many of the barriers to understanding how complex systems behave, and as a result <strong>specialized software and computer programming</strong> are a critical component to modern whole-systems analysis, including models of population and ecosystem dynamics. Armed with basic facility with computer programming, ecologists and natural resource professionals can formalize their understanding of the natural systems in which they work, accounting for complex biological realities that may have been ignored if these tools were not available. <strong>In this short-course, we will use computer simulations for understanding and managing natural populations</strong>. We’ll start simple, and quickly build up to relatively complex simulation models.</p>
+<p>Modern computers have reduced or eliminated many of the barriers to understanding how complex systems behave, and as a result <strong>specialized software and computer programming</strong> are a critical component to modern ecosystem studies and conservation biology, which deal with understanding complex systems.</p>
+<p>Armed with basic facility with computer programming, ecologists and natural resource professionals can formalize their understanding of the natural systems in which they work, accounting for complex biological realities that may have been ignored if these tools were not available. <strong>In this short-course, we will use computer simulations for understanding and performing ‘experiments’ with natural populations</strong>. We’ll start simple, and quickly build up to more complex simulation models.</p>
 </div>
 <div id="insightmaker-a-simulation-modeling-framework-for-dynamic-systems" class="section level3">
 <h3><em>InsightMaker</em>: a simulation modeling framework for dynamic systems!</h3>
@@ -532,7 +533,7 @@ div.tocify {
 <p>Your model should look something like this:</p>
 <p><img src="IM14.jpg" /></p>
 <ol start="3" style="list-style-type: decimal">
-<li><p>Hover your cursor over the two [Flows] (Births and Deaths). Do these equations make sense?</p></li>
+<li><p>Hover your cursor over the two [Flows] (Births and Deaths) and click on the equals sign to open up the equation editor. Do these equations make sense?</p></li>
 <li><p>Make sure the initial number of moose is set to 50, the birth rate is set to 0.5, and the death rate is set to 0.4. Now click [Run Simulation]. How would you describe the results?</p></li>
 </ol>
 <p><strong>Q</strong>: what happens if you set the birth rate equal to the death rate?</p>
@@ -573,7 +574,7 @@ div.tocify {
 <p><img src="IM15.jpg" /></p>
 <p>Here we see that the population went extinct three times out of a total of 50 replicates.</p>
 <p><strong>Please pause and take a minute to write down your response to the following question:</strong></p>
-<p><strong>Short Answer Question</strong>: What is the extinction risk for this population? Is this extinction risk <em>acceptable</em>?</p>
+<p><strong>Short Answer Question</strong>: What is the extinction risk for this population? Is this extinction risk <em>acceptable</em>? If not, what is an acceptable risk of extinction?</p>
 <p>[Pause and answer the discussion question on WebCampus!]</p>
 </div>
 </div>
@@ -611,10 +612,6 @@ div.tocify {
 <li><p>Use the “Sensitivity Testing” tool (in the “Tools” menu, upper right corner) to run the model multiple times. Choose [Population] as the “Monitored Primitive”.</p></li>
 <li><p>Change the initial abundance to 500 and re-run the “Sensitivity Testing” tool.</p></li>
 </ol>
-<p><strong>Please consider the following questions- write down your answers on a sheet of paper:</strong></p>
-<p><strong>Short Answer Question #5</strong> Does the population-level impact of <em>environmental stochasticity</em> depend on the initial abundance? If so, how?<br />
-<strong>Short Answer Question #6</strong> Can you explain why populations with a restricted geographic range (e.g., a small island) would be more vulnerable to <em>environmental stochasticity</em> than populations with a large range?</p>
-<p>[pause and record your answers on WebCampus]</p>
 </div>
 <div id="aside-mathematics-and-modeling-in-ecology" class="section level3">
 <h3>Aside: Mathematics and modeling in Ecology</h3>
