--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -518,15 +518,15 @@ div.tocify {
 </div>
 <div id="example-aruba-island-rattlesnake" class="section level2">
 <h2>Example: Aruba island rattlesnake</h2>
-<p>The aruba island rattlesnake, or Cascabel (<em>Crotalus durissus unicolor</em>), is the top predator on the island of Aruba, and primarily consumes rodents.</p>
+<p>The Aruba Island Rattlesnake, or Cascabel (<em>Crotalus durissus unicolor</em>), is the top predator on the island of Aruba, and primarily consumes rodents.</p>
 <p><img src="aruba_rattlesnake1.jpg" /></p>
 <p>The Aruba island rattlesnake, as you might expect, occurs only on the island of Aruba.</p>
 <p><img src="aruba1.png" /></p>
-<p>The Aruba rattlesnake is listed as <em>Critically Endangered</em> by IUCN (actually, it is no longer listed as of 2021 due to lack of information), and has several attributes that make it particularly susceptible to falling into the extinction vortex:</p>
+<p>The Aruba rattlesnake was listed as <em>Critically Endangered</em> by IUCN (it is no longer listed as of 2021 due to lack of information), and has several attributes that make it particularly susceptible to falling into the extinction vortex:</p>
 <p>See <a href="LAB5.html">Lab 5</a> for the related MVP activity.</p>
 <p><strong>Q</strong> Why are island-endemic species like the Aruba rattlesnake so vulnerable to extinction? [tophat]</p>
 <p><strong>Q</strong> Are species that are confined to small areas (like the Aruba rattlesnake) more vulnerable to <em>environmental stochasticity</em> than species that occupy larger geographic ranges? [tophat]</p>
-<p><a href="LECTURE10.html">–go to next lecture–</a></p>
+<p><a href="LECTURE11.html">–go to next lecture–</a></p>
 </div>
 
 
